--- a/public/recipe-detail.html
+++ b/public/recipe-detail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -28,12 +28,13 @@
       }
     });
   </script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/CSS/styles.css" />
+  <!-- Preload recursos críticos -->
+  <!-- CSS crítico primero -->
+  <link href="/vendor/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link rel="stylesheet" href="/CSS/styles.css">
+  <!-- Fuentes e iconos con carga diferida -->
+  <link href="/vendor/css/poppins.css" rel="stylesheet">
+  <link rel="stylesheet" href="/vendor/css/bootstrap-icons.min.css">
   <style>
     .validation-error {
       color: #dc3545;
@@ -66,7 +67,11 @@
       <div class="page-header-container mb-4">
         <h1 class="page-title" id="main-recipe-title"></h1>
       </div>
-      <h3 class="text-muted mb-4" id="recipe-pn-display"></h3>
+      <h3 class="text-muted mb-2" id="recipe-pn-display"></h3>
+      <div class="mb-4">
+        <small class="text-muted d-block" id="recipe-plate-pcb-info"></small>
+        <small class="text-muted d-block" id="recipe-stencil-pcb-info"></small>
+      </div>
       <div class="d-flex justify-content-between align-items-center mb-4">
         <ul class="nav nav-pills sub-navbar mb-3" id="toolingTabs" role="tablist">
           <li class="nav-item" role="presentation">
@@ -167,6 +172,24 @@
             </div>
 
             <div class="mb-3">
+              <label for="edit-model-plate-pcb" class="form-label">
+                PCB para Plate (Opcional)
+                <i class="bi bi-info-circle text-muted" title="Llenar SOLO si el Plate usa un PCB diferente al del modelo."></i>
+              </label>
+              <input type="text" class="form-control" id="edit-model-plate-pcb" maxlength="50" placeholder="Ej: P00.266-00">
+              <div class="form-text">Si se deja vacío, se exigirá un Plate con el mismo PCB del modelo.</div>
+            </div>
+
+            <div class="mb-3">
+              <label for="edit-model-stencil-pcb" class="form-label">
+                PCB para Stencil (Opcional)
+                <i class="bi bi-info-circle text-muted" title="Llenar SOLO si el Stencil usa un PCB diferente al del modelo."></i>
+              </label>
+              <input type="text" class="form-control" id="edit-model-stencil-pcb" maxlength="50" placeholder="Ej: P00.472-00">
+              <div class="form-text">Si se deja vacío, se exigirá un Stencil con el mismo PCB del modelo.</div>
+            </div>
+
+            <div class="mb-3">
               <label for="edit-model-pasta-select" class="form-label">Pasta</label>
               <select class="form-select" id="edit-model-pasta-select">
                 <option value="" selected disabled>Cargando...</option>
@@ -193,7 +216,7 @@
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/vendor/js/bootstrap.bundle.min.js"></script>
   <script src="/JS/authFetch.js"></script>
   <script src="/JS/globalAdmin.js"></script>
   <script src="/JS/recipe-detail.js"></script>
