--- a/public/recipes.html
+++ b/public/recipes.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -28,10 +28,13 @@
             }
         });
     </script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/CSS/styles.css" />
+    <!-- Preload recursos críticos -->
+    <!-- CSS crítico primero -->
+    <link href="/vendor/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link rel="stylesheet" href="/CSS/styles.css">
+    <!-- Fuentes e iconos con carga diferida -->
+    <link href="/vendor/css/poppins.css" rel="stylesheet">
+    <link rel="stylesheet" href="/vendor/css/bootstrap-icons.min.css">
     <style>
         .validation-error {
             color: #dc3545;
@@ -117,6 +120,14 @@
         <input type="text" class="form-control" id="new-model-plate-pcb" maxlength="50" placeholder="Ej: P00.266-00" />
         <div class="form-text">Si se deja vacío, se exigirá un Plate con el mismo PCB del modelo.</div>
     </div>
+    <div class="mb-3">
+        <label for="new-model-stencil-pcb" class="form-label">
+            PCB para Stencil (Opcional) 
+            <i class="bi bi-info-circle text-muted" title="Llenar SOLO si el Stencil usa un PCB diferente al del modelo."></i>
+        </label>
+        <input type="text" class="form-control" id="new-model-stencil-pcb" maxlength="50" placeholder="Ej: P00.266-00" />
+        <div class="form-text">Si se deja vacío, se exigirá un Stencil con el mismo PCB del modelo.</div>
+    </div>
 
                         <div class="mb-3">
                             <label for="new-model-pasta-select" class="form-label">Pasta</label>
@@ -177,7 +188,7 @@
         </div>
     </div>
     <footer class="footer-bar"></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/js/bootstrap.bundle.min.js"></script>
     <script src="/JS/authFetch.js"></script>
     <script src="/JS/globalAdmin.js"></script>
     <script src="/JS/recipes.js"></script>
