--- a/public/users-hp.html
+++ b/public/users-hp.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
@@ -27,12 +27,13 @@
         }
     });
     </script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="../CSS/styles.css" />
+    <!-- Preload recursos críticos -->
+    <!-- CSS crítico primero -->
+    <link href="/vendor/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link rel="stylesheet" href="../CSS/styles.css">
+    <!-- Fuentes e iconos con carga diferida -->
+    <link href="/vendor/css/poppins.css" rel="stylesheet">
+    <link rel="stylesheet" href="/vendor/css/bootstrap-icons.min.css">
     <style>
         .validation-error { color: #dc3545; font-size: 0.875em; display: none; margin-top: .25rem; }
         .action-buttons .btn { margin-right: 5px; }
@@ -205,7 +206,7 @@
 
     <footer class="footer-bar"></footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/js/bootstrap.bundle.min.js"></script>
     <script src="/JS/authFetch.js"></script>
     <script src="/JS/users.js"></script>
     <script src="/JS/globalAdmin.js"></script>
